--- a/backend/resources/templates/debug.tmpl
+++ b/backend/resources/templates/debug.tmpl
@@ -10,23 +10,36 @@ Debug Main Page
   <div>[<a href="/dbg/error">ERRORS</a>]</div>
 </nav>
 <main class="index">
-  <section>
-    <h2>Download file data:</h2>
-    <desc>Given an FILE-ID, downloads the file data as file. The file data is encoded using transit.</desc>
-    <form method="get" action="/dbg/file/data">
-      <input type="text" style="width:300px" name="file-id" placeholder="file-id" />
-      <input type="hidden" name="download" value="1" />
-      <input type="submit" value="Download" />
-    </form>
-  </section>
+  <section class="widget">
+    <fieldset>
+      <legend>Download file data:</legend>
+      <desc>Given an FILE-ID, downloads the file data as file. The file data is encoded using transit.</desc>
+      <form method="get" action="/dbg/file/data">
+        <div class="row">
+          <input type="text" style="width:300px" name="file-id" placeholder="file-id" />
+        </div>
+        <div class="row">
+          <input type="submit" name="download" value="Download" />
+          <input type="submit" name="clone" value="Clone" />
+        </div>
+      </form>
+    </fieldset>
 
-  <section>
-    <h2>Upload File Data:</h2>
-    <desc>Create a new file on your draft projects using the file downloaded from the previous section.</desc>
-    <form method="post" enctype="multipart/form-data" action="/dbg/file/data">
-      <input type="file" name="file" value="" />
-      <input type="submit" value="Upload" />
-    </form>
+    <fieldset>
+      <legend>Upload File Data:</legend>
+      <desc>Create a new file on your draft projects using the file downloaded from the previous section.</desc>
+      <form method="post" enctype="multipart/form-data" action="/dbg/file/data">
+        <div class="row">
+          <input type="file" name="file" value="" />
+        </div>
+        <div class="row">
+          <label>Import with same id?</label>
+          <input type="checkbox" name="reuseid" />
+        </div>
+
+        <input type="submit" value="Upload" />
+      </form>
+    </fieldset>
   </section>
 </main>
 {% endblock %}
